# PriceLens

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/src/: config.py
backend/src/api/: main.py  schemas.py  services.py
backend/src/data/: build_image_feature_cache.py  build_text_embedding_cache.py  clean_data.py  load_data.py  split_data.py
backend/src/features/: enhanced_features.py  image_features.py  structured_features.py  text_features.py  text_image_features.py  transformer_embeddings.py
backend/src/models/: artifacts.py  blend_submission.py  compare_models.py  ensemble.py  evaluate.py  import_predictions.py  optimize_ensemble.py  predict.py  reporting.py  train_baseline.py  train_enhanced_baseline.py  train_image_baseline.py  train_transformer_baseline.py
backend/src/utils/: metrics.py
backend/tests/: test_api_contract.py  test_blend_submission.py  test_clean_data.py  test_compare_models.py  test_ensemble.py  test_image_cache_merge.py  test_image_features.py  test_import_predictions.py  test_optimize_ensemble.py  test_split_data.py  test_structured_features.py  test_train_transformer_baseline.py  test_transformer_embeddings.py
docs/: backend.md  frontend.md  model.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/api/: priceLensApi.ts
frontend/src/components/: ImageUpload.tsx  Navbar.tsx  PredictionResultCard.tsx  (+1 more)
notebooks/: 01_text_baseline_demo.ipynb  02_structured_text_features.ipynb
(+7 files in other folders)
